@@ -7,8 +7,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <parent>
-        <groupId>eidolons</groupId>
-        <artifactId>eidolons-parent</artifactId>
+        <groupId>aphos</groupId>
+        <artifactId>aphos-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -59,11 +59,6 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>com.github.weisj</groupId>
-            <artifactId>darklaf-core</artifactId>
-            <version>2.5.5</version>
-        </dependency>
         <!-- https://mvnrepository.com/artifact/com.github.weisj/darklaf-theme -->
         <dependency>
             <groupId>com.github.weisj</groupId>
@@ -73,34 +68,37 @@
         </dependency>
 
         <dependency>
-            <groupId>eidolons</groupId>
-            <artifactId>eidolons</artifactId>
-            <version>0.5</version>
+            <groupId>aphos</groupId>
+            <artifactId>eidolon-core</artifactId>
+            <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>eidolons</groupId>
-            <artifactId>battlecraft-core</artifactId>
+            <groupId>aphos</groupId>
+            <artifactId>core-engine</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>eidolons</groupId>
+            <groupId>aphos</groupId>
             <artifactId>LibGdx-Core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>eidolons</groupId>-->
-<!--            <artifactId>Netherflame-Arena</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>eidolons</groupId>-->
-<!--            <artifactId>Netherflame-Campaign</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
-
+        <dependency>
+            <groupId>com.github.weisj</groupId>
+            <artifactId>darklaf-core</artifactId>
+            <version>2.5.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -121,16 +119,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>14</source>
-                    <target>14</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
